--- a/classifier_experiments/shadow_regions_experiment1_systemic_brightening.ipynb
+++ b/classifier_experiments/shadow_regions_experiment1_systemic_brightening.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "50f4fe3b",
+   "execution_count": 1,
+   "id": "7ccc8e6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,10 +39,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1cb0c70f",
+   "execution_count": 2,
+   "id": "993fee8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Mixed precision compatibility check (mixed_float16): WARNING\n",
+      "The dtype policy mixed_float16 may run slowly because this machine does not have a GPU. Only Nvidia GPUs with compute capability of at least 7.0 run quickly with mixed_float16.\n",
+      "If you will use compatible GPU(s) not attached to this host, e.g. by running a multi-worker model, you can ignore this warning. This message will only be logged once\n",
+      "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/experimental/loss_scale.py:208: DynamicLossScale.__init__ (from tensorflow.python.training.experimental.loss_scale) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.keras.mixed_precision.LossScaleOptimizer instead. LossScaleOptimizer now has all the functionality of DynamicLossScale\n"
+     ]
+    }
+   ],
    "source": [
     "# set directory\n",
     "os.chdir(\"/users/riya/race/classifier_experiments\") # which one? yep\n",
@@ -56,8 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "09023ea0",
+   "execution_count": 3,
+   "id": "513a2679",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,8 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "eb5fa7bd",
+   "execution_count": 4,
+   "id": "afcfa453",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +89,7 @@
        "(256, 256, 3)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,8 +100,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "f7c16fed",
+   "execution_count": 5,
+   "id": "ca2b81aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_from_id(img_path, path_name):\n",
+    "    arr = np.array(Image.open(img_path + path_name))\n",
+    "    resized = cv2.resize(arr, (256,256))\n",
+    "    channels = np.repeat(resized[:, :, np.newaxis], 3, axis=2).reshape((256,256,3))\n",
+    "    \n",
+    "    return channels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d95f33e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_race_from_id(img_id, race_csv_path):\n",
+    "\n",
+    "    \n",
+    "    race_data = pd.read_csv(race_csv_path)\n",
+    "    img_row = race_data.loc[race_data['image_id'] == int(img_id)] # they both must be ints\n",
+    "    img_row = img_row.reset_index(drop=True) # for .at to work\n",
+    "    img_race = img_row.at[0,'race']\n",
+    "    \n",
+    "    return img_race    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e649d320",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,40 +143,44 @@
     "@jit         \n",
     "def predict_on_images(img_path, preds_df, colname,\n",
     "                     skeleton, thresh_type, intensity_change, brighten_sum,\n",
-    "                     csv_name = \"brightened_predictions\"): \n",
+    "                     csv_name = \"brightened_predictions\", \n",
+    "                     preds_path = \"/users/riya/race/classifier_experiments/predictions/experiment1_plus_systemic_brightening/\", \n",
+    "                     race_csv_path = \"/users/riya/race/csv/image_race_data.csv\"): \n",
     "    \n",
     "    img_files = os.listdir(dataset_path)\n",
     "    num_images = len(img_files) - 4500\n",
     "    \n",
     "    id_arr = [0] * num_images\n",
+    "    race_arr = [0] * num_images\n",
     "    img_arr = np.zeros((num_images, 256, 256, 3))\n",
     "    \n",
     "    preds_arr = [0] * num_images\n",
     "    \n",
     "    for i in tqdm(range(num_images)):\n",
-    "        arr = np.array(Image.open(img_path + img_files[i]))\n",
-    "        resized = cv2.resize(arr, (256,256)) # must use 256\n",
-    "        channels = np.repeat(resized[:, :, np.newaxis], 3, axis=2).reshape((256,256,3))\n",
-    "\n",
+    "        channels = image_from_id(img_path, img_files[i])\n",
     "        modified_img = systemic_brightening(channels, skeleton, thresh_type, intensity_change, brighten_sum,\n",
     "                                           image_size = (256, 256))\n",
     "        modified_img = np.array(modified_img) # .reshape((1,256,256,3)) np reshape, bc substitute? \n",
-    "        # img_arr = np.append(img_arr, modified_img)\n",
     "        img_arr[i] = modified_img\n",
-    "        \n",
-    "        # print(img_arr.shape)\n",
     "                       \n",
     "        # getting id     \n",
-    "        img_id = re.findall(r'\\d+', img_files[i])\n",
-    "        id_arr[i] = img_id\n",
+    "        img_id = re.findall(r'\\d+', img_files[i])[0] # only one number\n",
+    "        id_arr[i] = int(img_id) # be sure it's int\n",
+    "        \n",
+    "        # print(type(id_arr[i]))\n",
+    "        \n",
+    "        # getting race\n",
+    "        img_race = get_race_from_id(img_id, race_csv_path)\n",
+    "        race_arr[i] = img_race\n",
     "    \n",
     "    preds_df['id'] = id_arr\n",
+    "    preds_df['race'] = race_arr\n",
     "  \n",
     "    # getting prediction    \n",
     "    prediction = segmentation_classifier(img_arr)\n",
     "    \n",
-    "    for j in range(num_images):\n",
-    "        preds_arr[j] = prediction.numpy()[j, 1] # returning the white prediction for each image\n",
+    "    for i in range(num_images):\n",
+    "        preds_arr[i] = prediction.numpy()[i, 1] # returning the white prediction for each image\n",
     "  \n",
     "    preds_df[colname] = preds_arr           \n",
     "    preds_df.to_csv(preds_path + csv_name + \".csv\")"
@@ -138,21 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "f469dbea",
+   "execution_count": 8,
+   "id": "02042bfa",
    "metadata": {},
    "outputs": [],
    "source": [
     "all_predictions = pd.DataFrame(columns = ['id', '30', '60', '90', '120', '150']) # from id I can get race\n",
     "\n",
-    "dataset_path = \"/users/riya/race/dataset/segmentations/\"\n",
-    "preds_path = \"/users/riya/race/classifier_experiments/predictions/experiment1_plus_systemic_brightening/\""
+    "dataset_path = \"/users/riya/race/dataset/segmentations/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "e25c267d",
+   "execution_count": 9,
+   "id": "2ac833fb",
    "metadata": {
     "scrolled": false
    },
@@ -161,101 +210,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-23-add7a222728a>:3: NumbaWarning: \n",
-      "Compilation is falling back to object mode WITH looplifting enabled because Function \"predict_on_images\" failed type inference due to: Untyped global name 'tqdm': Cannot determine Numba type of <class 'type'>\n",
-      "\n",
-      "File \"<ipython-input-23-add7a222728a>\", line 16:\n",
-      "def predict_on_images(img_path, preds_df, colname,\n",
-      "    <source elided>\n",
-      "    \n",
-      "    for i in tqdm(range(num_images)):\n",
-      "    ^\n",
-      "\n",
-      "  @jit\n",
-      "<ipython-input-23-add7a222728a>:3: NumbaWarning: \n",
-      "Compilation is falling back to object mode WITHOUT looplifting enabled because Function \"predict_on_images\" failed type inference due to: Cannot determine Numba type of <class 'numba.core.dispatcher.LiftedLoop'>\n",
-      "\n",
-      "File \"<ipython-input-23-add7a222728a>\", line 16:\n",
-      "def predict_on_images(img_path, preds_df, colname,\n",
-      "    <source elided>\n",
-      "    \n",
-      "    for i in tqdm(range(num_images)):\n",
-      "    ^\n",
-      "\n",
-      "  @jit\n",
-      "/usr/local/lib/python3.6/dist-packages/numba/core/object_mode_passes.py:152: NumbaWarning: Function \"predict_on_images\" was compiled in object mode without forceobj=True, but has lifted loops.\n",
-      "\n",
-      "File \"<ipython-input-23-add7a222728a>\", line 8:\n",
-      "def predict_on_images(img_path, preds_df, colname,\n",
-      "    <source elided>\n",
-      "    \n",
-      "    img_files = os.listdir(dataset_path)\n",
-      "    ^\n",
-      "\n",
-      "  state.func_ir.loc))\n",
-      "/usr/local/lib/python3.6/dist-packages/numba/core/object_mode_passes.py:162: NumbaDeprecationWarning: \n",
-      "Fall-back from the nopython compilation path to the object mode compilation path has been detected, this is deprecated behaviour.\n",
-      "\n",
-      "For more information visit https://numba.pydata.org/numba-doc/latest/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit\n",
-      "\n",
-      "File \"<ipython-input-23-add7a222728a>\", line 8:\n",
-      "def predict_on_images(img_path, preds_df, colname,\n",
-      "    <source elided>\n",
-      "    \n",
-      "    img_files = os.listdir(dataset_path)\n",
-      "    ^\n",
-      "\n",
-      "  state.func_ir.loc))\n",
-      "<ipython-input-23-add7a222728a>:3: NumbaWarning: \n",
-      "Compilation is falling back to object mode WITHOUT looplifting enabled because Function \"predict_on_images\" failed type inference due to: Untyped global name 'tqdm': Cannot determine Numba type of <class 'type'>\n",
-      "\n",
-      "File \"<ipython-input-23-add7a222728a>\", line 16:\n",
-      "def predict_on_images(img_path, preds_df, colname,\n",
-      "    <source elided>\n",
-      "    \n",
-      "    for i in tqdm(range(num_images)):\n",
-      "    ^\n",
-      "\n",
-      "  @jit\n",
-      "/usr/local/lib/python3.6/dist-packages/numba/core/object_mode_passes.py:152: NumbaWarning: Function \"predict_on_images\" was compiled in object mode without forceobj=True.\n",
-      "\n",
-      "File \"<ipython-input-23-add7a222728a>\", line 16:\n",
-      "def predict_on_images(img_path, preds_df, colname,\n",
-      "    <source elided>\n",
-      "    \n",
-      "    for i in tqdm(range(num_images)):\n",
-      "    ^\n",
-      "\n",
-      "  state.func_ir.loc))\n",
-      "/usr/local/lib/python3.6/dist-packages/numba/core/object_mode_passes.py:162: NumbaDeprecationWarning: \n",
-      "Fall-back from the nopython compilation path to the object mode compilation path has been detected, this is deprecated behaviour.\n",
-      "\n",
-      "For more information visit https://numba.pydata.org/numba-doc/latest/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit\n",
-      "\n",
-      "File \"<ipython-input-23-add7a222728a>\", line 16:\n",
-      "def predict_on_images(img_path, preds_df, colname,\n",
-      "    <source elided>\n",
-      "    \n",
-      "    for i in tqdm(range(num_images)):\n",
-      "    ^\n",
-      "\n",
-      "  state.func_ir.loc))\n",
-      " 48%|████▊     | 22/46 [00:04<00:04,  5.06it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-612dcc767928>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpredict_on_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_predictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'30'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'below'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'brighten'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/users/riya/race/classifier_experiments/utils.py\u001b[0m in \u001b[0;36msystemic_brightening\u001b[0;34m(img, skeleton, thresh_type, intensity_change, brighten_sum, none_thresh, image_size)\u001b[0m\n\u001b[1;32m    209\u001b[0m     \u001b[0;31m# depending on race\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    210\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 211\u001b[0;31m     \u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mmodified_img\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocess_skeletonize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mskeleton\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimage_size\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# do I wanna threshold with skeletonization?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    212\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    213\u001b[0m     \u001b[0;31m# brightening code, brightening all pixels ABOVE 20\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/users/riya/race/classifier_experiments/utils.py\u001b[0m in \u001b[0;36mprocess_skeletonize\u001b[0;34m(img, skeleton, image_size)\u001b[0m\n\u001b[1;32m     33\u001b[0m def process_skeletonize(img, skeleton, \n\u001b[1;32m     34\u001b[0m                         image_size): # (224, 224) typically\n\u001b[0;32m---> 35\u001b[0;31m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mcopy\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/numpy/lib/function_base.py\u001b[0m in \u001b[0;36m_copy_dispatcher\u001b[0;34m(a, order, subok)\u001b[0m\n\u001b[1;32m    708\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    709\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 710\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0m_copy_dispatcher\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    711\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    712\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "100%|██████████| 46/46 [00:07<00:00,  6.00it/s]\n"
      ]
     }
    ],
@@ -266,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b13ef7ea",
+   "id": "4e0cfb60",
    "metadata": {},
    "outputs": [],
    "source": []
