--- a/classifier_experiments/shadow_regions_experiment1_systemic_brightening.ipynb
+++ b/classifier_experiments/shadow_regions_experiment1_systemic_brightening.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "id": "dc3f439e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
     "import torch.optim as optim\n",
     "from torchvision import datasets, models, transforms\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import roc_auc_score, roc_curve\n",
     "\n",
     "from pathlib import Path\n",
     "\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "788dc1b7",
    "metadata": {},
    "outputs": [
@@ -3564,12 +3564,386 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
+   "id": "f00c655f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_path = \"/users/riya/race/classifier_experiments/CNN_train/outputs/probabilities/#10(macula_focus)/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "78646767",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_macula_non_skel = pd.read_csv(results_path + \"show_macula_brightened_by_0_epoch50.csv\")\n",
+    "show_macula_skel = pd.read_csv(results_path + \"show_macula_brightened_by_0_skeletonized_epoch50.csv\")\n",
+    "\n",
+    "hide_macula_non_skel = pd.read_csv(results_path + \"hide_macula_brightened_by_0_epoch50.csv\")\n",
+    "hide_macula_skel = pd.read_csv(results_path + \"hide_macula_brightened_by_0_skeletonized_epoch50.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "4fdf8382",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>img_loc</th>\n",
+       "      <th>probability</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.720475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.866231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.746231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.467659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.934661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>905</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.081580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>906</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.225085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>907</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.725670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>908</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.068766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>909</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.333136</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>910 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               img_loc  probability\n",
+       "0    /users/riya/race/classifier_experiments/CNN_tr...     0.720475\n",
+       "1    /users/riya/race/classifier_experiments/CNN_tr...     0.866231\n",
+       "2    /users/riya/race/classifier_experiments/CNN_tr...     0.746231\n",
+       "3    /users/riya/race/classifier_experiments/CNN_tr...     0.467659\n",
+       "4    /users/riya/race/classifier_experiments/CNN_tr...     0.934661\n",
+       "..                                                 ...          ...\n",
+       "905  /users/riya/race/classifier_experiments/CNN_tr...     0.081580\n",
+       "906  /users/riya/race/classifier_experiments/CNN_tr...     0.225085\n",
+       "907  /users/riya/race/classifier_experiments/CNN_tr...     0.725670\n",
+       "908  /users/riya/race/classifier_experiments/CNN_tr...     0.068766\n",
+       "909  /users/riya/race/classifier_experiments/CNN_tr...     0.333136\n",
+       "\n",
+       "[910 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hide_macula_skel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "4c894c9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/users/riya/race/classifier_experiments/CNN_train/dataset_full/test/white/33937.bmp'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hide_macula_skel['img_loc'][500]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "c582fe43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_arr = [0] * len(hide_macula_skel)\n",
+    "\n",
+    "for i in range(len(hide_macula_skel)):\n",
+    "    test_phrase = hide_macula_skel['img_loc'][i]\n",
+    "    if 'black' in test_phrase:\n",
+    "        race_arr[i] = 0\n",
+    "    if 'white' in test_phrase:\n",
+    "        race_arr[i] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "b5d77bbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "910"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(race_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "97b6d1ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hide_macula_skel['race'] = race_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "0cc99b6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>img_loc</th>\n",
+       "      <th>probability</th>\n",
+       "      <th>race</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.866755</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.144750</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>344</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.566279</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.038444</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.026375</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>905</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.081580</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>906</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.225085</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>907</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.725670</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>908</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.068766</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>909</th>\n",
+       "      <td>/users/riya/race/classifier_experiments/CNN_tr...</td>\n",
+       "      <td>0.333136</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>568 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               img_loc  probability  race\n",
+       "342  /users/riya/race/classifier_experiments/CNN_tr...     0.866755     1\n",
+       "343  /users/riya/race/classifier_experiments/CNN_tr...     0.144750     1\n",
+       "344  /users/riya/race/classifier_experiments/CNN_tr...     0.566279     1\n",
+       "345  /users/riya/race/classifier_experiments/CNN_tr...     0.038444     1\n",
+       "346  /users/riya/race/classifier_experiments/CNN_tr...     0.026375     1\n",
+       "..                                                 ...          ...   ...\n",
+       "905  /users/riya/race/classifier_experiments/CNN_tr...     0.081580     1\n",
+       "906  /users/riya/race/classifier_experiments/CNN_tr...     0.225085     1\n",
+       "907  /users/riya/race/classifier_experiments/CNN_tr...     0.725670     1\n",
+       "908  /users/riya/race/classifier_experiments/CNN_tr...     0.068766     1\n",
+       "909  /users/riya/race/classifier_experiments/CNN_tr...     0.333136     1\n",
+       "\n",
+       "[568 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hide_macula_skel[hide_macula_skel['race'] == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "143f6907",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fpr, tpr, _ = roc_curve(hide_macula_skel['race'],  1 - hide_macula_skel['probability'])\n",
+    "auc = roc_auc_score(hide_macula_skel['race'], 1 - hide_macula_skel['probability'])\n",
+    "auc = np.round(auc, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "c7ef1720",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8957"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "id": "af783abb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def percent_predictions(preds_df, race, increments_arr):\n",
+    "def percent_predictions(preds_df, race, increments_arr = []):\n",
     "    \n",
     "    pred = ''\n",
     "    \n",
@@ -3592,9 +3966,81 @@
     "    \n",
     "    # preds_print('original') # will do soon\n",
     "    \n",
-    "    for i in increments_arr:\n",
-    "        preds_print('probability_' + str(i))"
+    "    preds_print('probability')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "d1148cc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "white_show_macula_non_skel = hide_macula_skel[hide_macula_skel['race'] == 1]\n",
+    "black_show_macula_non_skel = hide_macula_skel[hide_macula_skel['race'] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "faade3b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percent of white Images Incorrectly Predicted as black\n",
+      "probability:79.5774647887324\n"
+     ]
+    }
+   ],
+   "source": [
+    "percent_predictions(white_show_macula_non_skel, 'white')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "2239b5bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percent of black Images Incorrectly Predicted as white\n",
+      "probability:82.45614035087719\n"
+     ]
+    }
+   ],
+   "source": [
+    "percent_predictions(black_show_macula_non_skel, 'black')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19ea5c15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46d15bc3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d0ad3bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
