routine commit, plus comitting about my second version of experiment 3

--- a/classifier_experiments/CNN_train/code/averaging_nonzero_pixels.ipynb
+++ b/classifier_experiments/CNN_train/code/averaging_nonzero_pixels.ipynb
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74d0a12b",
+   "id": "6364bd57",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd46aa9b",
+   "id": "c03b6637",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "db1cab91",
+   "id": "d4014866",
    "metadata": {},
    "outputs": [
     {
@@ -3048,7 +3048,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "edb32e37",
+   "id": "ac787204",
    "metadata": {},
    "outputs": [
     {
@@ -4069,7 +4069,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9a7462cf",
+   "id": "7c859f9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4083,7 +4083,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c3915f95",
+   "id": "f5d54765",
    "metadata": {},
    "outputs": [
     {
@@ -4122,7 +4122,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bcd3f5fd",
+   "id": "579bd8e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4135,7 +4135,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7fc66f32",
+   "id": "b6c8e7c9",
    "metadata": {},
    "outputs": [
     {
@@ -4174,7 +4174,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "3535e40d",
+   "id": "c9e71c52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4184,7 +4184,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "32afa1b6",
+   "id": "ad53fa27",
    "metadata": {},
    "outputs": [
     {
@@ -4205,7 +4205,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "9aa290bc",
+   "id": "75b46ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4215,7 +4215,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "b7f2810a",
+   "id": "74220908",
    "metadata": {},
    "outputs": [
     {
@@ -4235,8 +4235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "04b04b8e",
+   "execution_count": 26,
+   "id": "28c12106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4266,7 +4266,11 @@
     "        \n",
     "        randint_arr = [0.5] * numLabels # cause there'll never be a decimal label\n",
     "        \n",
-    "        img_ind\n",
+    "        img_index = random.randint(0, numLabels)\n",
+    "        if img_index in randint_arr:\n",
+    "            img_index = random.randint(0, numLabels) # retry man\n",
+    "        \n",
+    "        # above is inefficient code!\n",
     "        \n",
     "        area = stats[i, cv2.CC_STAT_AREA]\n",
     "        \n",
@@ -4295,15 +4299,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65d21023",
+   "id": "5e29a930",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "a5431706",
+   "execution_count": 27,
+   "id": "2fb4fa71",
    "metadata": {},
    "outputs": [
     {
@@ -5457,17 +5461,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "202bfbfa",
+   "execution_count": 28,
+   "id": "6804f39e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6c642116d8>"
+       "<matplotlib.image.AxesImage at 0x7f6c640cacf8>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5495,7 +5499,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "dc427d28",
+   "id": "38f60c1b",
    "metadata": {},
    "outputs": [
     {
@@ -5516,7 +5520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12777a68",
+   "id": "6773da3f",
    "metadata": {},
    "outputs": [],
    "source": []
