looking at feature maps! Pretty epic!

--- a/classifier_experiments/evaluating_segmentation_model.ipynb
+++ b/classifier_experiments/evaluating_segmentation_model.ipynb
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "21c547a7",
+   "id": "22d7f647",
    "metadata": {},
    "outputs": [
     {
@@ -149,8 +149,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 226,
+   "id": "f582cf4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "440"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(os.listdir(\"/users/riya/race/segmentation_experiments/DeepROP/output/segmentation\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 142,
-   "id": "ccdac40a",
+   "id": "1e23b7f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "54a02398",
+   "id": "67d69d09",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "81242daf",
+   "id": "1ca9758a",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "580492ed",
+   "id": "c408ee0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "6d1cdba6",
+   "id": "791ee1c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "7fdd8847",
+   "id": "0791c438",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,17 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 227,
    "id": "75f73166",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f0e9fc98dd8>"
+       "<matplotlib.image.AxesImage at 0x7f0e91b2ecc0>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -284,6 +305,30 @@
    "source": [
     "plt.imshow(final_img)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf9f96ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be43d9b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a94926f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -339,19 +384,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 228,
    "id": "e1da0c1e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([134,  82,  80], dtype=uint8)"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_rgb[50, 50]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "45f60277",
+   "execution_count": 229,
+   "id": "0672830f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_img = cv2.cvtColor(im, cv2.COLOR_YCR_CB2RGB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "45f60277",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([133,  82,  79], dtype=uint8)"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_img[50, 50]"
+   ]
   },
   {
    "cell_type": "code",
@@ -363,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "695d4418",
+   "id": "c8961251",
    "metadata": {},
    "source": [
     "## Evaluating Results"
@@ -372,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "dd69ac01",
+   "id": "fef83f4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "25f1fba5",
+   "id": "c17b99ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "72867bb4",
+   "id": "3501b9ce",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "2fde135a",
+   "id": "f9bf8992",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "57e00112",
+   "id": "dd48fd4c",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "7160090b",
+   "id": "53d804e9",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "56bd1a83",
+   "id": "6b59f8c4",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "cfca32c7",
+   "id": "5b5312ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "1725c56a",
+   "id": "19710369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e625ece",
+   "id": "a77dc3a9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -540,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e0ed7a5",
+   "id": "a24649b1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -548,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "01ab23e9",
+   "id": "74e26c17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "d05517ee",
+   "id": "539d1154",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "d8df5374",
+   "id": "576c4b02",
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "7df471e4",
+   "id": "c8476aa7",
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "2f3b83e3",
+   "id": "d1d52079",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "c7048b81",
+   "id": "a5ab86d7",
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eefd69b",
+   "id": "5ac5af08",
    "metadata": {},
    "outputs": [],
    "source": []
