--- a/classifier_experiments/nonzero_pixel_analysis_plus_macula.ipynb
+++ b/classifier_experiments/nonzero_pixel_analysis_plus_macula.ipynb
@@ -38,7 +38,7 @@
     "from sklearn import metrics\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from utils import ( checksum, process_skeletonize, determine_image_center, ring_region_mask, \n",
+    "from utils import ( checksum, make_nonzero_dict, process_skeletonize, determine_image_center, ring_region_mask, \n",
     "                   load_QA_csv, get_colvalue_from_id, image_center_from_id, channeled_image_from_id, \n",
     "                  count_nonzero)"
    ]
@@ -3685,7 +3685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 38,
    "id": "f26a9b5e",
    "metadata": {},
    "outputs": [],
@@ -3695,18 +3695,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 39,
    "id": "b3b02651",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nonskel_0 = pd.read_csv(preds_path + 'full_set_nonskeletonized_nonzero_count_above_0.csv')\n",
-    "skel_0 = pd.read_csv(preds_path + 'skeletonized_nonzero_count_above_0.csv')"
+    "nonskel_full = pd.read_csv(preds_path + 'full_set_nonskeletonized_nonzero_count_above_0.csv')\n",
+    "skel_full = pd.read_csv(preds_path + 'full_set_skeletonized_nonzero_count_above_0.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 40,
    "id": "6712b61e",
    "metadata": {},
    "outputs": [
@@ -3716,18 +3716,64 @@
        "11170.5"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.median(nonskel_0['0-318'])"
+    "np.median(nonskel_full['0-318'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
+   "id": "7b6e63f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'skeletonized_white': 3999.0,\n",
+       " 'skeletonized_black': 2699.0,\n",
+       " 'non-skeletonized_white': 13112.0,\n",
+       " 'non-skeletonized_black': 8703.0}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_nonzero_dict(\"full_set\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34967bb6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "f9c7b077",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nonskel_0 = pd.read_csv(preds_path + 'optic_disk_sets/nonskeletonized_nonzero_count_above_0.csv')\n",
+    "nonskel_20 = pd.read_csv(preds_path + 'optic_disk_sets/nonskeletonized_nonzero_count_above_20.csv')\n",
+    "\n",
+    "skel_0 = pd.read_csv(preds_path + 'optic_disk_sets/skeletonized_nonzero_count_above_0.csv')\n",
+    "skel_20 = pd.read_csv(preds_path + 'optic_disk_sets/skeletonized_nonzero_count_above_20.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "c5042d7f",
    "metadata": {},
    "outputs": [],
@@ -3741,51 +3787,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "72def04c",
+   "execution_count": 43,
+   "id": "ca347926",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nonzero_dict = {'skeletonized - white': np.median(skel_0_white['0-159']),\n",
-    "                'skeletonized - black': np.median(skel_0_black['0-159']),\n",
-    "                'non-skeletonized - white': np.median(nonskel_0_white['0-159']),\n",
-    "                'non-skeletonized - black': np.median(nonskel_0_black['0-159'])}"
+    "def circle_area(r1, r2):\n",
+    "    area_large = np.pi * r2*r2\n",
+    "    area_small = np.pi * r1 * r1\n",
+    "    \n",
+    "    return (area_large - area_small)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "b5268c22",
+   "execution_count": 44,
+   "id": "6bbdb0d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def determine_nonzero_ratios(df_white, df_black):\n",
+    "    area_constant = 5000\n",
+    "    \n",
+    "    for col in df_black.columns[2:]:\n",
+    "        med_white = np.median(df_white[col])\n",
+    "        med_black = np.median(df_black[col])\n",
+    "        \n",
+    "        print (f\"{col}: white-{med_white} black-{med_black}\")\n",
+    "        print (f\"difference: {med_white-med_black}\")\n",
+    "        \n",
+    "        col_nums = re.findall(r'\\d+', col)\n",
+    "        \n",
+    "        assert len(col_nums) == 2\n",
+    "        area_col = circle_area(int(col_nums[0]), int(col_nums[1]))\n",
+    "        \n",
+    "        print (f\"weighted area difference: {(area_constant/area_col) * (med_white-med_black)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "5119d904",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'skeletonized - white': 3846.0,\n",
-       " 'skeletonized - black': 2460.0,\n",
-       " 'non-skeletonized - white': 13841.5,\n",
-       " 'non-skeletonized - black': 8903.0}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0-159: white-13841.5 black-8903.0\n",
+      "difference: 4938.5\n",
+      "weighted area difference: 310.9001568210614\n",
+      "0-30: white-1580.5 black-1465.0\n",
+      "difference: 115.5\n",
+      "weighted area difference: 204.248843634599\n",
+      "30-60: white-3289.5 black-2221.0\n",
+      "difference: 1068.5\n",
+      "weighted area difference: 629.8409507173709\n",
+      "60-90: white-3851.0 black-2299.0\n",
+      "difference: 1552.0\n",
+      "weighted area difference: 548.9077148413812\n",
+      "0-45: white-3080.0 black-2518.0\n",
+      "difference: 562.0\n",
+      "weighted area difference: 441.70408897602556\n",
+      "45-90: white-5594.0 black-3506.0\n",
+      "difference: 2088.0\n",
+      "weighted area difference: 547.0214340343662\n"
+     ]
     }
    ],
    "source": [
-    "nonzero_dict"
+    "determine_nonzero_ratios(nonskel_0_white, nonskel_0_black)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "a076cdde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0-159: white-3846.0 black-2460.0\n",
+      "difference: 1386.0\n",
+      "weighted area difference: 87.25475698167278\n",
+      "0-30: white-358.0 black-297.0\n",
+      "difference: 61.0\n",
+      "weighted area difference: 107.87168365117351\n",
+      "30-60: white-885.5 black-596.0\n",
+      "difference: 289.5\n",
+      "weighted area difference: 170.64946675964333\n",
+      "60-90: white-1075.0 black-647.0\n",
+      "difference: 428.0\n",
+      "weighted area difference: 151.37403476295822\n",
+      "0-45: white-756.0 black-570.0\n",
+      "difference: 186.0\n",
+      "weighted area difference: 146.18676254366682\n",
+      "45-90: white-1558.0 black-969.0\n",
+      "difference: 589.0\n",
+      "weighted area difference: 154.3082493516483\n"
+     ]
+    }
+   ],
+   "source": [
+    "determine_nonzero_ratios(skel_0_white, skel_0_black)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e89102e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98333804",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c7ac2a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "913ade1d",
+   "id": "ecce9692",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1386.0"
+       "1580.5"
       ]
      },
      "execution_count": 12,
@@ -3794,98 +3936,20 @@
     }
    ],
    "source": [
-    "nonzero_dict['skeletonized_white'] - nonzero_dict['skeletonized_black']"
+    "np.median(nonskel_0_white['0-30'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40ad4065",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "63ef40bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nonzero_dict2 = {'skeletonized - white': np.mean(skel_0_white['0-159']),\n",
-    "                'skeletonized - black': np.mean(skel_0_black['0-159']),\n",
-    "                'non-skeletonized - white': np.mean(nonskel_0_white['0-159']),\n",
-    "                'non-skeletonized - black': np.mean(nonskel_0_black['0-159'])}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "c0cc9580",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'skeletonized - white': 3858.061830574489,\n",
-       " 'skeletonized - black': 2595.634016704632,\n",
-       " 'non-skeletonized - white': 13925.687439143136,\n",
-       " 'non-skeletonized - black': 9283.926347760062}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nonzero_dict2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0a9cb67",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e9f6d4a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ac17494",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "11b4898a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nonskel_0 = pd.read_csv(preds_path + 'nonskeletonized_nonzero_count_above_0.csv')\n",
-    "nonskel_20 = pd.read_csv(preds_path + 'nonskeletonized_nonzero_count_above_20.csv')\n",
-    "\n",
-    "skel_0 = pd.read_csv(preds_path + 'skeletonized_nonzero_count_above_0.csv')\n",
-    "skel_20 = pd.read_csv(preds_path + 'skeletonized_nonzero_count_above_20.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "93298834",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nonskel_0_white = nonskel_0[nonskel_0['race'] == 'white']\n",
-    "nonskel_0_black = nonskel_0[nonskel_0['race'] == 'black']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "6394cde4",
    "metadata": {},
    "outputs": [
@@ -4064,7 +4128,7 @@
        "[3371 rows x 8 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
