--- a/classifier_experiments/CNN_train/code/train.ipynb
+++ b/classifier_experiments/CNN_train/code/train.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1888ecf4",
    "metadata": {},
    "outputs": [],
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "bd5d3557",
    "metadata": {
     "scrolled": true
@@ -335,37 +335,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wed Jun 29 15:47:36 2022       \r\n",
-      "+-----------------------------------------------------------------------------+\r\n",
-      "| NVIDIA-SMI 470.129.06   Driver Version: 470.129.06   CUDA Version: 11.4     |\r\n",
-      "|-------------------------------+----------------------+----------------------+\r\n",
-      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\r\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\r\n",
-      "|                               |                      |               MIG M. |\r\n",
-      "|===============================+======================+======================|\r\n",
-      "|   0  Tesla K80           Off  | 00000000:06:00.0 Off |                    0 |\r\n",
-      "| N/A   57C    P0    60W / 149W |  11261MiB / 11441MiB |      0%      Default |\r\n",
-      "|                               |                      |                  N/A |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "|   1  Tesla K80           Off  | 00000000:07:00.0 Off |                    0 |\r\n",
-      "| N/A   39C    P0    74W / 149W |    276MiB / 11441MiB |      0%      Default |\r\n",
-      "|                               |                      |                  N/A |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "|   2  Tesla K80           Off  | 00000000:85:00.0 Off |                    0 |\r\n",
-      "| N/A   62C    P0    62W / 149W |   2840MiB / 11441MiB |      0%      Default |\r\n",
-      "|                               |                      |                  N/A |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "|   3  Tesla K80           Off  | 00000000:86:00.0 Off |                    0 |\r\n",
-      "| N/A   43C    P0    73W / 149W |   7068MiB / 11441MiB |      0%      Default |\r\n",
-      "|                               |                      |                  N/A |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "                                                                               \r\n",
-      "+-----------------------------------------------------------------------------+\r\n",
-      "| Processes:                                                                  |\r\n",
-      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\r\n",
-      "|        ID   ID                                                   Usage      |\r\n",
-      "|=============================================================================|\r\n",
-      "+-----------------------------------------------------------------------------+\r\n"
+      "Mon Aug 29 15:34:01 2022       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 470.141.03   Driver Version: 470.141.03   CUDA Version: 11.4     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                               |                      |               MIG M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  Tesla K80           Off  | 00000000:06:00.0 Off |                    0 |\n",
+      "| N/A   57C    P0    59W / 149W |  11254MiB / 11441MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   1  Tesla K80           Off  | 00000000:07:00.0 Off |                    0 |\n",
+      "| N/A   40C    P0   125W / 149W |   8546MiB / 11441MiB |     95%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   2  Tesla K80           Off  | 00000000:85:00.0 Off |                    0 |\n",
+      "| N/A   62C    P0    62W / 149W |    648MiB / 11441MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   3  Tesla K80           Off  | 00000000:86:00.0 Off |                    0 |\n",
+      "| N/A   43C    P0    73W / 149W |   1150MiB / 11441MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                                  |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+      "|        ID   ID                                                   Usage      |\n",
+      "|=============================================================================|\n",
+      "+-----------------------------------------------------------------------------+\n"
      ]
     }
    ],
@@ -1904,6 +1904,69 @@
    ],
    "source": [
     "prepare_full_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf5bc081",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "56b9c03e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_dataset_given():\n",
+    "    \n",
+    "    csv_path = \"/users/riya/race/csv/\"\n",
+    "    data_path = \"/users/riya/race/dataset/segmentations/\"\n",
+    "    save_path = \"/users/riya/race/classifier_experiments/CNN_train/dataset_given/\"\n",
+    "    QA_csv_path = \"../optic_disk/DeepROP/quality_assurance/QA.csv\"\n",
+    "    \n",
+    "    X_train = pd.read_csv(csv_path + \"train.csv\")\n",
+    "    X_test = pd.read_csv(csv_path + \"test.csv\")\n",
+    "    X_val = pd.read_csv(csv_path + \"val.csv\")\n",
+    "    \n",
+    "    def populate_folders(data_df, data_type):\n",
+    "    \n",
+    "        for i in tqdm(range(len(data_df))):\n",
+    "            data_df.reset_index(drop=True, inplace=True)\n",
+    "            img_id = data_df['image_id'][i]\n",
+    "            race = data_df['race'][i]\n",
+    "\n",
+    "            img = np.array(Image.open(data_path + str(img_id) + '.bmp'))\n",
+    "            img = Image.fromarray(img)\n",
+    "\n",
+    "            img.save(save_path + str(data_type) + '/' + str(race) + '/' + str(img_id) + '.bmp')\n",
+    "    \n",
+    "    populate_folders(X_train, 'train')\n",
+    "    populate_folders(X_val, 'val')\n",
+    "    populate_folders(X_test, 'test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "241571d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2764/2764 [00:21<00:00, 129.92it/s]\n",
+      "100%|██████████| 973/973 [00:07<00:00, 133.47it/s]\n",
+      "100%|██████████| 809/809 [00:06<00:00, 133.22it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "prepare_dataset_given()"
    ]
   },
   {
